Fix top bar buttons on Tabler theme displayed on mobile device

--- a/assets/styles/app_tabler.css
+++ b/assets/styles/app_tabler.css
@@ -5,3 +5,7 @@ aside .btn.active {
 nav {
     box-shadow: none !important;
 }
+
+.navbar-toggler {
+    display: inline-block;
+}
